<resources>
    <string name="app_name">MySubmission2</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Aktifkan dark mode</string>
    <string name="settings">Settings\n</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Aktifkan notifikasi</string>
    <string name="title_settings">Settings</string>
    <string name="image_detail">Image Detail</string>
    <string name="button_is_favorite">Button is Favorite</string>
    <string name="item_image">Item List Image\n</string>
</resources>