<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_upcoming">

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.mysubmission2.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.mysubmission2.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.mysubmission2.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.mysubmission2.ui.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" >
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="default title" />
    </activity>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.mysubmission2.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>