<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/item_tv_title_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="@string/dark_mode"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_tv_description_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/enable_dark_mode"
        app:layout_constraintTop_toBottomOf="@id/item_tv_title_dark_mode"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/item_switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toEndOf="@+id/item_tv_title_dark_mode"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_tv_title_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:text="@string/notifications"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/item_tv_description_dark_mode"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_tv_description_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/enable_notifications"
        app:layout_constraintTop_toBottomOf="@id/item_tv_title_notifications"
        app:layout_constraintStart_toStartOf="@id/item_tv_title_dark_mode" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/item_switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/item_switch_dark_mode"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toEndOf="@+id/item_tv_title_notifications"
        app:layout_constraintTop_toBottomOf="@id/item_switch_dark_mode" />
</androidx.constraintlayout.widget.ConstraintLayout>